tests/fixtures/errors/unknown_field.lazy
obj = { name: "Alice", age: 30 }
result = obj.unknownField
result
